--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "@payloadcms/db-vercel-postgres": "3.33.0",
     "@payloadcms/next": "3.33.0",
     "@payloadcms/payload-cloud": "3.33.0",
-    "@payloadcms/plugin-cloud-storage": "^3.37.0",
     "@payloadcms/richtext-lexical": "3.33.0",
-    "@payloadcms/storage-vercel-blob": "^3.37.0",
+    "@payloadcms/storage-vercel-blob": "3.33.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.3.0",
