--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/db-vercel-postgres": "3.37.0",
-    "@payloadcms/next": "3.37.0",
-    "@payloadcms/payload-cloud": "3.37.0",
+    "@payloadcms/db-vercel-postgres": "^3.37.0",
+    "@payloadcms/next": "^3.37.0",
+    "@payloadcms/payload-cloud": "^3.37.0",
     "@payloadcms/plugin-cloud-storage": "^3.37.0",
     "@payloadcms/richtext-lexical": "3.37.0",
     "@payloadcms/storage-vercel-blob": "^3.37.0",
