--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@payloadcms/storage-vercel-blob": "^3.37.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
+    "isomorphic.js": "^0.2.5",
+    "lib0": "^0.2.107",
+    "monaco-editor": "^0.52.2",
     "next": "15.3.0",
     "payload": "^3.37.0",
+    "picomatch": "^4.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "yjs": "^13.6.26"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
